Now using HTML files for articles in `proposals/` instead of generating them from markdown files.

--- a/format.css
+++ b/format.css
@@ -10,9 +10,9 @@
 }
 .banner-text {
 	position: absolute;
-	bottom: 5%;
-	left: 33%;
-	transform: translate(-40%, 0%);
+	bottom: calc(2px + 4%);
+	left: calc(30px + 25%);
+	transform: translate(-25%, 0%);
 	padding: 1px;
 	font-size: 32px;
 	font-family: Verdana;
@@ -103,7 +103,7 @@
 }
 
 .link-card p {
-	font-size: 14px;
+	font-size: 96%;
 }
 
 footer {
@@ -130,7 +130,10 @@ td, th {
 }
 
 p {
-	margin-left: 0.5em;
-	margin-right: 0.5em;
 	max-width: 900px;
+}
+
+article {
+	margin-left: 6px;
+	max-width: 1200px;
 }
