--- a/template.html.erb
+++ b/template.html.erb
@@ -4,7 +4,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title><%= title %></title>
-	<link rel="stylesheet" href="<%= base_dir %>/format.css">
+	<base href="../">
+	<link rel="stylesheet" href="format.css">
 	<script type="text/javascript" async
 		src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML">
 	</script>
@@ -22,7 +23,7 @@
 		});
 	</script>
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-	<script src="<%= base_dir %>/insert-html.js"></script>
+	<script src="insert-html.js"></script>
 </head>
 <body>
 	<div id="header-container"></div>
